--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -10,22 +10,22 @@ import Contact from "./Contact.astro";
         <Contact
           href="mailto:rodriguezcuelloc@gmail.com"
           title="contact via this email address"
-          iconType="icon-google"
+          iconType="google"
         />
         <Contact
           href="https://github.com/carlosjorger"
           title="See my github profile"
-          iconType="icon-github"
+          iconType="github"
         />
         <Contact
           href="https://www.linkedin.com/in/carlosjorger/"
           title="See my linkedin profile and connect with me"
-          iconType="icon-linkedin"
+          iconType="linkedin"
         />
         <Contact
           href="https://twitter.com/carlosjorgerc"
           title="See my twitter profile and follow me"
-          iconType="icon-twitter"
+          iconType="twitter"
         />
       </address>
     </div>
