remove classes from AboutMe

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,18 +1,20 @@
 <section id="aboutMe">
-    <div class="centered-article">
-      <header><h2 class="subtitle reveal">About me</h2></header>
-      <p class="reveal">
-        Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
-        coding on and off the work. I started working as a backend developer
-        in 2020 using .net technologies and sql server.
-      </p>
-      <p class="reveal">
-        Currently, I'm also working on frontend technologies like angular,
-        vue, html, css.
-      </p>
-      <p class="reveal">
-        In my free time I like listening to music, reading books or watching
-        movies from favorite directors.
-      </p>
-    </div>
-  </section>
+  <div class="flex flex-col justify-center h-[90%] p-4">
+    <header>
+      <h2 class="text-[var(--default-font-color)] text-4xl reveal">About me</h2>
+    </header>
+    <p class="reveal">
+      Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
+      coding on and off the work. I started working as a backend developer in
+      2020 using .net technologies and sql server.
+    </p>
+    <p class="reveal">
+      Currently, I'm also working on frontend technologies like angular, vue,
+      html, css.
+    </p>
+    <p class="reveal">
+      In my free time I like listening to music, reading books or watching
+      movies from favorite directors.
+    </p>
+  </div>
+</section>
