create subtitle component

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,11 +1,12 @@
 ---
 import Contact from "./Contact.astro";
+import Subtitle from "../shared/Subtitle.astro";
 ---
 
 <footer>
   <div class="footer">
     <div id="contact" class="contacts reveal">
-      <h2 class="subtitle contacts-item">Contact</h2>
+      <Subtitle center>Contact</Subtitle>
       <address class="contacts-item">
         <Contact
           href="mailto:rodriguezcuelloc@gmail.com"
