--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -1,14 +1,15 @@
 ---
 import Project from "./Project.astro";
+import Subtitle from "../shared/Subtitle.astro";
 ---
 
 <section id="work">
   <div class="card-projects">
     <header>
-      <h2 class="subtitle reveal">
+      <Subtitle left>
         Some projects<br />
         I've made
-      </h2>
+      </Subtitle>
     </header>
 
     <Project
