--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,7 +1,11 @@
+---
+import Subtitle from "./shared/Subtitle.astro";
+---
+
 <section id="aboutMe">
   <div class="flex flex-col justify-center h-[90%] p-4">
     <header>
-      <h2 class="text-[var(--default-font-color)] text-4xl reveal">About me</h2>
+      <Subtitle left>About me</Subtitle>
     </header>
     <p class="reveal">
       Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
