--- a/src/components/Header/SideBarLink.astro
+++ b/src/components/Header/SideBarLink.astro
@@ -10,7 +10,7 @@ const { iconType, href, label } = Astro.props;
 ---
 
 <li
-  class="flex text-left p-2 pl-20 items-center justify-start transition-colors ease-in-out active:bg-[#241c2d]"
+  class="flex w-40 p-2 items-center justify-start transition-colors ease-in-out active:bg-[#241c2d]"
 >
   <IconElement iconType={iconType} height="h-6" width="w-6" />
   <Link href={href}>
