--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -5,7 +5,7 @@ import IconElement from "../shared/IconElement.astro";
 ---
 
 <header>
-  <nav class="navbar-uncompressed">
+  <nav class="navbar-uncompressed shadow-lg shadow-black">
     <ul class="navbar">
       <li id="home">
         <a href="#" aria-label="Go to the presentation section">
