--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -4,7 +4,7 @@ import Subtitle from "../shared/Subtitle.astro";
 ---
 
 <section id="work">
-  <div class="card-projects">
+  <div class="flex flex-col p-4">
     <header>
       <Subtitle left>
         Some projects<br />
