replace classes from project-section

--- a/src/components/Work/Project.astro
+++ b/src/components/Work/Project.astro
@@ -12,7 +12,7 @@ const { id, title, description, anchorLabel, githubLink } = Astro.props;
 
 <article
   id={id}
-  class="font-lato p-1 m-2 lg:w-[60%] md:w-[65%] sm:w-[70%] flex flex-col bg-[#322644] rounded border-solid border-[0.1rem] border-[var(--default-secundary-font-color)] shadow-lg shadow-black reveal"
+  class="self-start font-lato p-1 m-2 md:w-[65%] sm:w-[70%] flex flex-col bg-[#322644] rounded border-solid border-[0.1rem] border-[var(--default-secundary-font-color)] shadow-lg shadow-black reveal"
 >
   <header class="text-[var(--default-font-color)] p-2">
     <h3 class="m-0">{title}</h3>
