--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -3,7 +3,7 @@ import Project from "./Project.astro";
 import Subtitle from "../shared/Subtitle.astro";
 ---
 
-<section id="work">
+<section id="work" class="md:h-[120vh] h-[80vh]">
   <div class="flex flex-col p-4">
     <header>
       <Subtitle left>
