add missed metadata

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,27 @@ const { title } = Astro.props;
     <meta property="og:locale" content="en_US" />
     <meta property="og:url" content="https://carlosjorger.github.io" />
     <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Carlos Jorge's personal portfolio website"
+    />
+    <meta
+      property="og:description"
+      content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
+    />
+    <meta
+      property="og:site_name"
+      content="Carlos Jorge's personal portfolio website"
+    />
+    <meta property="og:image" content="/images/logo.png" />
+    <meta
+      property="twitter:description"
+      content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
+    />
+    <meta
+      property="twitter:title"
+      content="Carlos Jorge's personal portfolio website"
+    />
     <link rel="icon" type="image/svg+xml" href="/images/logo-icon.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
