--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ const { title } = Astro.props;
       property="og:site_name"
       content="Carlos Jorge's personal portfolio website"
     />
-    <meta property="og:image" content="https://carlosjorger.github.io/images/logo.png" />
+    <meta property="og:image" content="https://carlosjorger.github.io/images/purple-logo.png" />
     <meta
       property="twitter:description"
       content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
