add rustycopier project

--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -23,8 +23,15 @@ import Subtitle from "../shared/Subtitle.astro";
       id="online-cv-maker"
       description="An online cv maker made in astro using vuejs components."
       title="Online CV Maker"
-      anchorLabel="See my portfolio github project"
+      anchorLabel="See my online cv maker github project"
       githubLink="https://github.com/carlosjorger/astro-vue-online-cv-maker"
+    />
+    <Project
+      id="rusty-copier"
+      description="Its a copier implemented in rust programming language."
+      title="Rusty Copier"
+      anchorLabel="See my rusty copier github project"
+      githubLink="https://github.com/carlosjorger/rustycopier"
     />
   </div>
 </section>
