--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,7 @@ const { title } = Astro.props;
       property="twitter:title"
       content="Carlos Jorge's personal portfolio website"
     />
-    <link rel="icon" type="image/svg+xml" href="/images/logo-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
