--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,6 +73,7 @@ import Presentation from "../components/Presentation.astro";
 <Layout title="Carlos Jorge's personal portfolio website">
   <Header />
   <main>
+    <!-- TODO: Add Scroll Snap Mandatory -->
     <Presentation />
     <AboutMe />
     <Work />
