--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -2,23 +2,21 @@
   <div class="text-[var(--default-font-color)] p-4 font-lato">
     <div class="reveal active">
       <h1
-        class="presentation-title text-4xl text-[var(--default-secundary-font-color)] my-3 mx-0"
+        class="presentation-title text-3xl text-[var(--default-secundary-font-color)] my-3 mx-0"
       >
         Hi, I am <br class="br-show" />Carlos Jorge, <br />
         Web developer!
       </h1>
     </div>
     <div class="reveal active">
-      <h2 class="presentation-main-skill text-3xl my-3 mx-0">
+      <h2 class="presentation-main-skill text-2xl my-3 mx-0">
         Welcome to my personal portfolio!
       </h2>
     </div>
     <div class="reveal active">
       <p class="presentation-description my-3 mx-0">
         I'm a cuban computer science from Havana University. Currently, I'm
-        working as full-stack engineer focused in building .net application and
-        their performance. Also, I work in frontend websites using frameworks
-        like angular, vue or react.
+        working as full-stack engineer building .net and Vuejs applications.
       </p>
     </div>
   </div>
