--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ import Presentation from "../components/Presentation.astro";
           changeState(navColumnarMenuBackground);
         }
       },
-      false
+      {passive: true}
     );
   });
 </script>
