remove Im from presentation text

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -15,8 +15,7 @@
     </div>
     <div class="reveal active">
       <p class="presentation-description my-3 mx-0">
-        I'm a cuban computer science from Havana University. Currently, I'm
-        working as full-stack engineer building .net and Vuejs applications.
+        Cuban computer science from Havana University. Currently working as full-stack engineer building .net and Vuejs applications.
       </p>
     </div>
   </div>
