✨ feat: add cuvimaker

--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -21,10 +21,10 @@ import Subtitle from "../shared/Subtitle.astro";
     />
     <Project
       id="online-cv-maker"
-      description="An online cv maker made in astro using vuejs components."
-      title="Online CV Maker"
+      description="An online cv maker web application used to design a custom curriculum vitae."
+      title="Cuvimaker"
       anchorLabel="See my online cv maker github project"
-      githubLink="https://github.com/carlosjorger/astro-vue-online-cv-maker"
+      githubLink="https://github.com/carlosjorger/cuvimaker"
     />
     <Project
       id="rusty-copier"
