🦄 refactor: delete footer.css
replace footer.css with tailwind code

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -4,7 +4,7 @@ import Subtitle from "../shared/Subtitle.astro";
 ---
 
 <footer>
-  <div class="footer">
+  <div class="grid h-screen">
     <div id="contact" class="flex flex-col justify-center reveal">
       <Subtitle center>Contact</Subtitle>
       <address class="text-center">
