--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,7 +2,7 @@
 import Subtitle from "./shared/Subtitle.astro";
 ---
 
-<section id="aboutMe">
+<section id="aboutMe" class="h-screen">
   <div class="flex flex-col justify-center h-[90%] p-4">
     <header>
       <Subtitle left>About me</Subtitle>
