--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,10 +1,10 @@
-<section>
+<section class=" h-screen">
   <div class="text-[var(--default-font-color)] p-4 font-lato">
     <div class="reveal active">
       <h1
         class="presentation-title text-4xl text-[var(--default-secundary-font-color)] my-3 mx-0"
       >
-        Hi, I am <br class="br-show" />Carlos Jorge, <br />
+        Hi, I am <br class="hidden max-sm:inline" />Carlos Jorge, <br />
         Web developer!
       </h1>
     </div>
