📃 docs: add TODO

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Presentation from "../components/Presentation.astro";
 ---
 
 <script>
+  // TODO: refactor this code
   function reveal() {
     var revealElements = document.getElementsByClassName("reveal");
     [...revealElements].forEach((element) => {
