🦄 refactor: change header style

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -6,10 +6,10 @@ import IconElement from "../shared/IconElement.astro";
 
 <header>
   <nav class="navbar-uncompressed top-0 w-full fixed z-[4] backdrop-blur shadow-lg shadow-black">
-    <ul class="navbar">
+    <ul class="navbar p-0.5">
       <li id="home">
         <a href="#" aria-label="Go to the presentation section">
-          <IconElement iconType="house" height="h-8" width="w-8" />
+          <IconElement iconType="house" height="h-6" width="w-7" />
         </a>
       </li>
       <li>
