--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -63,7 +63,7 @@ i {
 
 .reveal.active {
   opacity: 1 !important;
-  transition: all 500ms ease-in;
+  transition: all 500ms ease-out;
   transform: translate(0vh, 0vh);
 }
 
