--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -6,8 +6,8 @@ import IconElement from "../shared/IconElement.astro";
 
 <header>
   <nav class="navbar-uncompressed top-0 w-full fixed z-[4] backdrop-blur shadow-lg shadow-black">
-    <ul class="navbar p-0.5">
-      <li id="home">
+    <ul class="flex flex-row justify-between m-0 p-0.5 [&>li]:self-center max-sm:hidden">
+      <li id="home" class="p-1">
         <a href="#" aria-label="Go to the presentation section">
           <IconElement iconType="house" height="h-6" width="w-7" />
         </a>
