🦄 refactor: remove logo class

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -33,7 +33,7 @@ import IconElement from "../shared/IconElement.astro";
       >
         <picture class="image-container">
           <img
-            class="logo changeable"
+            class="logo m-auto h-auto transition-all duration-500 ease-out rotate-180 [&.active]:rotate-0 changeable"
             src="./images/logo-1.svg"
             alt="logo"
             width="200"
