--- a/src/components/Work/Work.astro
+++ b/src/components/Work/Work.astro
@@ -5,7 +5,7 @@ import Subtitle from "../shared/Subtitle.astro";
 
 <section id="work">
   <div class="flex flex-col p-4">
-    <header>
+    <header class="p-3">
       <Subtitle left>
         Some projects<br />
         I've made
