--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Presentation from "../components/Presentation.astro";
 ---
 
 <script>
-  import {reveal} from "../utils/events"
+  import {reveal} from "../utils/scrollEvents"
   import {touchOutsideColumnNavbar,touchIcon} from "../utils/touchEvents"
 
   document.addEventListener("scroll", reveal);
