🦄 refactor: remove nav-header-menu class

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -20,7 +20,7 @@ import IconElement from "../shared/IconElement.astro";
     </ul>
   </nav>
   <nav class="hidden fixed top-0 w-full z-[2] max-sm:block">
-    <div class="nav-header-menu changeable">
+    <div class="changeable p-3 z-[2] w-full backdrop-blur shadow-[0px_0px_20px]">
       <IconElement
         id="show-nav-columnar-menu"
         iconType="bars"
