🐞 fix: change column navbar animation

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -5,7 +5,7 @@ import IconElement from "../shared/IconElement.astro";
 ---
 
 <header>
-  <nav class="navbar-uncompressed top-0 w-full fixed z-[4] backdrop-blur shadow-lg shadow-black">
+  <nav class="top-0 w-full fixed z-[4] backdrop-blur shadow-lg shadow-black">
     <ul class="flex flex-row justify-between m-0 p-0.5 [&>li]:self-center max-sm:hidden">
       <li id="home" class="p-1">
         <a href="#" aria-label="Go to the presentation section">
@@ -29,7 +29,7 @@ import IconElement from "../shared/IconElement.astro";
       />
     </div>
     <div class="nav-columnar-menu-background absolute p-0 mt-0 w-screen h-screen top-0 overflow-hidden z-50 changeable bg-[rgba(0, 0, 0, 0)] transition-all duration-300 delay-100 ease-in invisible">
-      <div id="nav-columnar-menu" class="changeable absolute mt-0 w-3/4 h-screen left-[-100vw] transition-all ease-out duration-300 text-[0.9rem] bg-[#241c2d]"
+      <div id="nav-columnar-menu" class="changeable absolute mt-0 w-3/4 h-screen left-[-100vw] transition-all ease-in-out duration-500 text-[0.9rem] bg-[#241c2d]"
       >
         <picture class="image-container">
           <img
