--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -28,10 +28,10 @@ import IconElement from "../shared/IconElement.astro";
         width="w-8"
       />
     </div>
-    <div class="nav-columnar-menu-background absolute p-0 mt-0 w-screen h-screen top-0 overflow-hidden z-50 changeable bg-[rgba(0, 0, 0, 0)] transition-all duration-300 delay-100 ease-in invisible">
-      <div id="nav-columnar-menu" class="changeable absolute mt-0 w-3/4 h-screen left-[-100vw] transition-all ease-in-out duration-500 text-[0.9rem] bg-[#241c2d]"
+    <div class="nav-columnar-menu-background absolute p-0 mt-0 w-screen h-screen top-0 overflow-hidden z-50 changeable bg-[rgba(0, 0, 0, 0)] transition-all duration-300 delay-100 ease-in-out invisible [&.active]:ease-out [&.active]:bg-[#00000080]">
+      <div id="nav-columnar-menu" class="changeable absolute mt-0 w-3/4 h-screen left-[-100vw] transition-all ease-in-out duration-500 text-[0.9rem] bg-[#241c2d] [&.active]:left-0 [&.active]:ease-out"
       >
-        <picture class="image-container">
+        <picture class="image-container p-2 w-11/12 m-auto block text-center">
           <img
             class="logo m-auto h-auto transition-all duration-500 ease-out rotate-180 [&.active]:rotate-0 changeable"
             src="./images/logo-1.svg"
