🐞 fix: add margin to subtitle

--- a/src/components/shared/Subtitle.astro
+++ b/src/components/shared/Subtitle.astro
@@ -8,8 +8,8 @@ const { center = false, left = false, right = false } = Astro.props;
 ---
 
 <h2
+  class="text-[var(--default-font-color)] text-3xl reveal my-2"
   class:list={[
-    "text-[var(--default-font-color)] text-3xl reveal",
     { "text-left": left, "text-center": center, "text-right": right },
   ]}
 >
