--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -12,7 +12,7 @@ import IconElement from "../shared/IconElement.astro";
           <IconElement iconType="house" height="h-6" width="w-7" />
         </a>
       </li>
-      <li>
+      <li class="mx-2">
         <Link href="#work">Work</Link>
         <Link href="#aboutMe">About me</Link>
         <Link href="#contact">Contact</Link>
