🦄 refactor: create custom animations
create custom tailwind animations

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -2,19 +2,19 @@
   <div class="text-[var(--default-font-color)] p-4 font-lato">
     <div class="reveal active">
       <h1
-        class="presentation-title text-4xl text-[var(--default-secundary-font-color)] my-3 mx-0"
+        class="animate-presentation-title text-4xl text-[var(--default-secundary-font-color)] my-3 mx-0"
       >
         Hi, I am <br class="hidden max-sm:inline" />Carlos Jorge, <br />
         Web developer!
       </h1>
     </div>
     <div class="reveal active">
-      <h2 class="presentation-main-skill text-3xl my-3 mx-0">
+      <h2 class="animate-presentation-main-skill text-3xl my-3 mx-0">
         Welcome to my personal portfolio!
       </h2>
     </div>
     <div class="reveal active">
-      <p class="presentation-description my-3 mx-0">
+      <p class="animate-presentation-description my-3 mx-0">
         Cuban computer science from Havana University. Currently working as full-stack engineer building .net and Vuejs applications.
       </p>
     </div>
