🐞 fix: replace active with inactive

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,6 +1,6 @@
 <section class=" h-screen">
   <div class="text-[var(--default-font-color)] p-4 font-lato">
-    <div class="reveal active">
+    <div class="reveal">
       <h1
         class="animate-presentation-title text-4xl text-[var(--default-secundary-font-color)] my-3 mx-0"
       >
@@ -8,12 +8,12 @@
         Web developer!
       </h1>
     </div>
-    <div class="reveal active">
+    <div class="reveal">
       <h2 class="animate-presentation-main-skill text-3xl my-3 mx-0">
         Welcome to my personal portfolio!
       </h2>
     </div>
-    <div class="reveal active">
+    <div class="reveal">
       <p class="animate-presentation-description my-3 mx-0">
         Cuban computer science from Havana University. Currently working as full-stack engineer building .net and Vuejs applications.
       </p>
