🦄 refactor: remove i style

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -6,7 +6,7 @@ import IconElement from "../shared/IconElement.astro";
 
 <header>
   <nav class="top-0 w-full fixed z-[4] backdrop-blur shadow-lg shadow-black">
-    <ul class="flex flex-row justify-between m-0 p-0.5 [&>li]:self-center max-sm:hidden">
+    <ul class="flex flex-row justify-between m-0 p-0.5 [&>li]:self-center max-sm:hidden list-none">
       <li id="home" class="p-1">
         <a href="#" aria-label="Go to the presentation section">
           <IconElement iconType="house" height="h-6" width="w-7" />
