--- a/src/components/shared/IconElement.astro
+++ b/src/components/shared/IconElement.astro
@@ -12,7 +12,7 @@ const { iconType, height, width, id = undefined } = Astro.props;
 
 <i
   id={id}
-  class= "text-teal-300 hover:text-black hover:transition-all hover:duration-500 hover:drop-shadow-[0rem_0rem_1rem_aqua] ease-in-out inline-block bg-no-repeat change-sidebar"
+  class= "text-teal-300 hover:text-black hover:transition-all hover:duration-500 hover:drop-shadow-[0rem_0rem_1rem_aqua] ease-in-out inline-block bg-no-repeat change-sidebar m-0.5"
   class:list={[
     height,
     width,
