--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import Contact from "./Contact.astro";
 import Subtitle from "../shared/Subtitle.astro";
+import CustomLink from "../shared/CustomLink.astro";
 ---
 
 <footer>
@@ -36,13 +37,13 @@ import Subtitle from "../shared/Subtitle.astro";
       <p class="text-center text-xl my-0 mx-auto reveal">
         <strong class="inline italic">© 2022 Carlos Jorge</strong>
         <br />
-        <a
-          class="work-link"
-          href="https://github.com/carlosjorger/carlosjorger.github.io"
-          >Published</a
-        >
+        <CustomLink href="https://github.com/carlosjorger/carlosjorger.github.io">
+          Published
+        </CustomLink>
         in
-        <a class="work-link" href="https://pages.github.com/">Github Page</a>
+        <CustomLink href="https://pages.github.com/">
+          Github Page
+        </CustomLink>
       </p>
     </div>
   </div>
